targets/srv0/k3s/freshrss/freshrss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - name: freshrss
          image: freshrss/freshrss:1.29.1
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 10
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          volumeMounts:
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/data
            - name: freshrss-extensions
              mountPath: /var/www/FreshRSS/extensions
      volumes:
        - name: freshrss-data
          persistentVolumeClaim:
            claimName: freshrss-data-pvc
        - name: freshrss-extensions
          persistentVolumeClaim:
            claimName: freshrss-extensions-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: freshrss
  ports:
    - port: 80
      targetPort: 80
